<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceCategory android:title="@string/pref_category_notifications">
	    <CheckBoxPreference android:title="@string/pref_notification_activate" android:key="notification.active" android:defaultValue="true" android:persistent="true"/>
	    <RingtonePreference android:title="@string/pref_notification_sound" android:ringtoneType="notification|alarm" android:key="notification.sound" android:dependency="notification.active"/>
	    <CheckBoxPreference android:title="@string/pref_notification_vibration" android:key="notification.vibrate" android:dependency="notification.active" android:defaultValue="true"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_category_filter">
	    <EditTextPreference android:title="@string/pref_notification_compatibility" android:key="query.rank" android:defaultValue="0.6" android:persistent="true"/>
	    <EditTextPreference android:title="@string/pref_notification_distance" android:key="query.radius" android:defaultValue="100" android:persistent="true"/>
		<ListPreference android:title="@string/pref_filter_defaultview" android:entryValues="@array/home_views_values" android:entries="@array/home_views_strings" android:key="home" android:persistent="true" android:defaultValue="0"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_category_tracking">
		<CheckBoxPreference android:title="@string/pref_tracking_enabled" android:key="tracking.enabled" android:defaultValue="true" android:persistent="true" />
	</PreferenceCategory><PreferenceCategory android:title="@string/pref_category_account">
		<Preference android:title="@string/pref_account_logout" android:persistent="false" android:key="logout"/>
		<Preference android:title="@string/pref_account_delete" android:persistent="false" android:key="delete"/>
	</PreferenceCategory>
	
</PreferenceScreen>